# cxm

./: README.md  build.lua  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1715665925047-d2a3991ba0b02.mjs
.github/workflows/: rust.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  main.json
src-tauri/src/: lib.rs  live.rs  location_info_getter.rs  main.rs  protocol.rs  room.rs  signner.rs  state.rs  tools.rs
src-tauri/src/command/: account.rs  course.rs  mod.rs  sign.rs  tools.rs  xddcc.rs
src/lib/: CourseSigns.svelte  HomeCourses.svelte  HomeSigns.svelte  HomeTest.svelte  HomeUsers.svelte  Login.svelte
src/lib/commands/: account.ts  course.ts  sign.ts  tools.ts  xddcc.ts
src/lib/sign/: Gesture.svelte  Location.svelte  Other.svelte  QrCode.svelte  SignLayout.svelte  Signcode.svelte
src/lib/sign/components/: GestureInput.svelte  ListRoom.svelte  M3u8Video.svelte  RoomList.svelte  ShowUrl.svelte  UserRoomList.svelte  Users.svelte
src/routes/: +layout.svelte  +page.svelte
