[package]
name = "csm"
version = "0.0.1-beta.0"
description = "A Tauri App"
authors = ["worksoup"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# cxsign = { git = "https://github.com/worksoup/newsign.git" }
cxsign = { git = "https://github.com/worksoup/newsign.git", branch = "dev-v0.2" }
# cxsign = { path = "../../newsign/" }
env_logger = "0.11"
image = "0.25"
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-barcode-scanner = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
xcap = { version = "0.0.14" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"
